syntax = "proto3";
package p2p;
import "google/protobuf/empty.proto";

message Player {
    int32 id = 1;
    int32 listenPort = 2;
    string playerAddress = 3;
    int32 x = 4;
    int32 y = 5;
}


enum Phase{
    UNKNOWN = 0;
    PREPARATION = 1;
    ELECTION = 2;
    GAME = 3;
    END = 4;
}

message GreetResponse{
    Phase phase = 1;
}


message CoordinatorId{
    int32 id = 1;
}
message OkResponse {
    bool ok = 1;
}

message TagResponse{
    bool tagged = 1;
}

message HomeBaseRequest{
    message PlayerConnection{
        string playerAddress = 1;
        int32 listenPort = 2;
    }
    PlayerConnection player = 1;
    int64 timestamp = 2;

}

message PlayerOutcome{
    bool safe = 1;
    Player player = 2;
}

service P2PService {
    rpc presentSelf(Player) returns (GreetResponse);
    rpc election(google.protobuf.Empty) returns (OkResponse);
    rpc coordinator(CoordinatorId) returns (google.protobuf.Empty);
    rpc tag(google.protobuf.Empty) returns (TagResponse);
    rpc acquireHomeBase(HomeBaseRequest) returns (OkResponse);
    rpc releaseHomeBase(OkResponse) returns (google.protobuf.Empty);
    rpc notifyOutcome(PlayerOutcome) returns (google.protobuf.Empty);
    rpc endGame(google.protobuf.Empty) returns(google.protobuf.Empty);
    rpc goToPreparation(google.protobuf.Empty) returns(google.protobuf.Empty);
}
